--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
  @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i&display=swap');
 
 body {
-  background-color: rgb(58, 193, 98);
+  background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
   color: white;
   font-family: 'Playfair Display', serif;
   padding: 5px;
@@ -29,14 +29,14 @@ h1 {
 .load-quote {
   color: #fff;
   text-shadow: 1px 1px 1px rgba(50, 50, 50, 0.3);
-  width: 12em;
-  max-height: 75px;
+  width: 4em;
+  height: 4em;
   margin-top: 20px;
   margin-bottom: 20px;
   padding: 15px 0;
   background-color: rgba(0, 0, 0, 0.1);
-  border-radius: 4px;
-  border: 2px solid rgba(0, 0, 0, 0.3);
+  border-radius: 50%;
+  border: 1px ;
   transition: 0.5s;
 }
 
@@ -162,5 +162,15 @@ h1 {
 
   .source {
     font-size: 1.25rem;
+  }
+
+  #image {
+    height: 250px;
+    width: 250px;
+    display: block;
+    margin: auto;
+    margin-top: 5%;
+    border-radius: 50%;
+    border: solid rgba(0, 0, 0, 0.1) 8px;
   }
 }
